--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     "path": "https://esm.sh/path@^0.12.7",
     "url": "https://esm.sh/url@^0.11.4",
     "axios": "https://esm.sh/axios@^1.13.4",
-    "react/": "https://esm.sh/react@^19.2.4/",
+    "technicalindicators": "https://esm.sh/technicalindicators@^3.1.0",
     "react": "https://esm.sh/react@^19.2.4",
+    "react/": "https://esm.sh/react@^19.2.4/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "technicalindicators": "https://esm.sh/technicalindicators@^3.1.0"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
