--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Intraday Hawk</title>
-    <!-- Tailwind via CDN for quick fallback, though we use build process -->
-    <script src="https://cdn.tailwindcss.com"></script>
     <meta name="description" content="Intraday Stock Screener" />
   <script type="importmap">
 {
@@ -15,12 +13,12 @@
     "path": "https://esm.sh/path@^0.12.7",
     "url": "https://esm.sh/url@^0.11.4",
     "axios": "https://esm.sh/axios@^1.13.4",
+    "module": "https://esm.sh/module@^2.0.0",
     "react": "https://esm.sh/react@^19.2.4",
     "react/": "https://esm.sh/react@^19.2.4/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "module": "https://esm.sh/module@^2.0.0"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
