--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
   <script type="importmap">
 {
   "imports": {
-    "express": "https://esm.sh/express@^5.2.1",
-    "cors": "https://esm.sh/cors@^2.8.6",
-    "path": "https://esm.sh/path@^0.12.7",
-    "url": "https://esm.sh/url@^0.11.4",
-    "axios": "https://esm.sh/axios@^1.13.4",
-    "module": "https://esm.sh/module@^2.0.0",
+    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "recharts": "https://esm.sh/recharts@^3.7.0",
-    "react/": "https://esm.sh/react@^19.2.4/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "cors": "https://esm.sh/cors@^2.8.6",
+    "path": "https://esm.sh/path@^0.12.7",
+    "url": "https://esm.sh/url@^0.11.4",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "axios": "https://esm.sh/axios@^1.13.4",
+    "yahoo-finance2": "https://esm.sh/yahoo-finance2@^3.13.0",
+    "express": "https://esm.sh/express@^5.2.1",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "module": "https://esm.sh/module@^2.0.0"
   }
 }
 </script>
